--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ h2 { font-size: var(--fs-h2)};
 h3 { font-size: var(--fs-h3)};
 
 .section__title {
-    margin-bottom: .25em;
+    margin-bottom: 0.25em;
 }
 .section__title--intro {
     font-weight: var(--fw-reg);
@@ -102,6 +102,11 @@ h3 { font-size: var(--fs-h3)};
     padding: .25em 1em;
     font-family: var(--ff-secondary);
     margin-bottom: 1em;
+}
+.section__subtitle--work {
+    color: var(--clr-accent);
+    font-weight: var(--fw-bold);
+    margin-bottom: 2em;
 }
 /* Header */
 nav { display: none; }
@@ -183,4 +188,109 @@ nav { display: none; }
     .service + .service {
         margin-left: 2em;
     }
+}
+/* About me */
+.about-me {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+.about-me__img {
+    box-shadow: var(--bs);
+}
+@media (min-width: 600px) {
+    .about-me {
+        display: grid;
+        grid-template-columns: 1fr 200px;
+        grid-template-areas:
+            "title img"
+            "subtitle img"
+            "text img";
+        grid-column-gap: 2em;
+    }
+    .section__title--about {
+        grid-area: title;
+    }
+    .section__subtitle--about {
+        grid-column: 1/-1;
+        grid-row: 2;
+        grid-area: subtitle;
+        position: relative;
+        left: -1em;
+        width: calc(100% + 2em);
+        padding-left: 1em;
+        padding-right: calc(200px + 0.7em);
+    }
+    .about-me__img {
+        grid-area: img;
+        position: relative;
+        z-index: 2;
+    }
+}
+
+/* My work */
+.my-work {
+    background-color: var(--clr-dark);
+    color: var(--clr-light);
+    text-align: center;
+}
+.portfolio {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-row-gap: 1em;
+    grid-column-gap: 1em;
+    /* max-width:; */
+}
+.portfolio__item {
+    background: var(--clr-accent);
+    overflow: hidden;
+}
+.portfolio__img {
+    transition:
+        transform 750ms cubic-bezier(0.5, 0, 0.5, 1),
+        opacity 250ms linear;
+}
+.portfolio__item:focus {
+    position: relative;
+    z-index: 2;
+}
+.portfolio__img:hover,
+.portfolio__item:focus .portfolio__img {
+    transform: scale(1.2);
+    opacity: 0.75;
+}
+
+/* Footer */
+.footer {
+    background: #111;
+    color: var(--clr-accent);
+    text-align: center;
+    padding: 2.5em 0;
+    font-size: var(--fs-h3);
+}
+.footer a {
+    color: inherit;
+    text-decoration: none;
+}
+.footer__link {
+    font-weight: var(--fw-bold);
+}
+.footer__link:hover,
+.social-list__link:hover {
+    opacity: 0.7;
+}
+.footer__link:hover {
+    text-decoration: underline;
+}
+.social-list {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    margin: 2em  0;
+    padding: 0;
+}
+.social-list__item {
+    margin: 0 0.5em;
+}
+.social-list__link {
+    padding: 0.5em;
 }
